<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tvSignUp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:text="@string/sign_up"
        android:layout_width="300dp"
        android:layout_height="100dp" />
    <EditText
        android:id="@+id/edtSignUpUser"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:hint="@string/mail"
        android:layout_below="@id/tvSignUp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/edtSignUpPass"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/pass"
        android:layout_below="@id/edtSignUpUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/edtSignUpPassConf"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/cpass"
        android:layout_below="@id/edtSignUpPass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/btnRegister"
        android:layout_below="@id/edtSignUpPassConf"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/reg"/>

</RelativeLayout>